--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ EMAIL_HOST_PASSWORD=MAILAPPPASSWORD
 EMAIL_HOST_USER=MAIL
 EMAIL_HOST=smtp.gmail.com
 
-
-NAME=DBNAME
-USER=USERNAME
-PASSWORD=PASSWORD
-HOST=HOST
-PORT=PORT
+SECRET_KEY=SECRET_KEY
+NAME=DB_NAME
+USER=DB_USER
+PASSWORD=DB_PASSWORD
+HOST=DB_HOST
+PORT=DB_PORT
