--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ EMAIL_HOST_USER=MAIL
 EMAIL_HOST=smtp.gmail.com
 
 SECRET_KEY=SECRET_KEY
-NAME=DB_NAME
-USER=DB_USER
-PASSWORD=DB_PASSWORD
-HOST=DB_HOST
-PORT=DB_PORT
+DB_NAME=DB_NAME
+DB_USER=DB_USER
+DB_PASSWORD=DB_PASSWORD
+DB_HOST=DB_HOST
+DB_PORT=DB_PORT
